[package]
name = "tftpeer"
version = "0.1.0"
authors = ["shakram02 <ahmedhamdyau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
clap = { git = "https://github.com/clap-rs/clap/" }
pretty-bytes = "0.2.2"
async-std = "1.5.0"
